Update personal information in thongtin.html

--- a/thongtin.html
+++ b/thongtin.html
@@ -63,7 +63,7 @@
 <body>
     <h1>Thông Tin Cá Nhân & Liên Hệ</h1>
     
-    <h2>Nguyễn Huy Hoàng</h2>
+    <h2>Võ Anh Khoa</h2>
 
     <p>Dưới đây là một số thông tin cơ bản và cách thức liên lạc với tôi.</p>
     
@@ -71,7 +71,7 @@
     <ul>
         <li><strong>Ngày sinh:</strong> [07/05/2009]</li>
         <li><strong>Quê quán:</strong> [Thành phố Nha Trang]</li>
-        <li><strong>Trình độ học vấn:</strong> [Trung học cơ sở]</li>
+        <li><strong>Trình độ học vấn:</strong> [Trung học Phổ thông]</li>
         <li><strong>Sở thích:</strong> [Photoshop]</li>
     </ul>
 
@@ -82,3 +82,4 @@
         <li><strong>Địa chỉ hiện tại:</strong> [Vĩnh Phương]</li>
         <li><strong>GitHub/Portfolio:</strong> <a href="[Đường dẫn GitHub của bạn]" target="_blank">[Đường dẫn GitHub của bạn]</a></li>
     </ul>
+
